# confido

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
app/: config.py  deps.py  main.py
app/api/: routes.py
app/models/: database.py  schemas.py
app/services/: conversation_manager.py  healthcare_service.py  openai_wrapper.py  voice_processor.py
app/utils/: audio_utils.py  logger.py
demo/: streamlit_app.py
